--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,13 +6,18 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+:root{
+    --primary: #0D1821;
+    --secondary: #4ECDC4;
+    --tertiary: #F7FFF7
+}
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #1f293a;
+    background: var(--primary);
 }
 
 container{
@@ -30,7 +35,7 @@ container{
     left: 620px;
     width: 32px;
     height: 6px;
-    background: #2c4766;
+    background: var(--tertiary);
     border-radius: 8px;
     transform-origin: 128px;
     transform: scale(2.7) rotate(calc(var(--i) * (360deg/50)));
@@ -40,11 +45,11 @@ container{
 
 @keyframes blink{
     0%{
-        background: #0ef;
+        background: var(--secondary);
     }
 
-    25%{
-        background: #2c4766;
+    30%{
+        background: var(--secondary);
     }
 }
 
@@ -61,7 +66,7 @@ form{
 
 h2{
     font-size: 2em;
-    color: #0ef;
+    color: var(--secondary);
     text-align: center;
 }
 
@@ -74,7 +79,7 @@ input{
     width: 100%;
     height: 50px;
     background: transparent;
-    border: 2px solid #2c4766;
+    border: 2px solid var(--secondary);
     outline: none;
     border-radius: 40px;
     font-size: 1em;
@@ -84,7 +89,7 @@ input{
 }
 
 input:focus{
-    border-color: #0ef;
+    border-color: var(--secondary);
 }
 
 label{
@@ -101,9 +106,9 @@ label{
 input:focus ~ label{
     top: 1px;
     font-size: .8em;
-    background: #1f293a;
+    background: var(--primary);
     padding: 0 6px;
-    color: #0ef;
+    color: var(--secondary);
 }
 
 .forgot-pass{
@@ -120,13 +125,13 @@ input:focus ~ label{
 .btn{
     width: 100%;
     height: 45px;
-    background: #0ef;
+    background: var(--secondary);
     border: none;
     outline: none;
     border-radius: 40px;
     cursor: pointer;
     font-size: 1em;
-    color: #1f293a;
+    color: var(--primary);
     font-weight: 600;
 }
 
@@ -137,7 +142,7 @@ input:focus ~ label{
 
 .signup-link a{
     font-size: 1em;
-    color: #0ef;
+    color: var(--secondary);
     text-decoration: none;
     font-weight: 600;
 }
